# data-compass

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  GOVERNANCE.rst  LICENSE  Makefile  README.md  README.rst  SECURITY.md  SECURITY.rst  manage.py  package-lock.json  package.json  setup.cfg  tox.ini  webpack-stats.json  webpack.config.js
apps/organizations/: admin.py  apps.py  models.py
apps/projects/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  urls.py  views.py
apps/questionnaires/: admin.py  apps.py  models.py
apps/respondents/: admin.py  apps.py  filters.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
apps/responses/: admin.py  apps.py  filters.py  mixins.py  models.py  urls.py
apps/surveys/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  signals.py  urls.py
apps/users/: adapter.py  admin.py  forms.py  managers.py  models.py  urls.py  views.py
assets/bundles/: main.css  main.js
assets/js/: app.js  export-utils.js  popup-response.js  related-objects.js
assets/sass/: _mixins.scss  _overrides.scss  _theme-tabler.scss  _variables.scss  _variables_overrides.scss  app.scss  main.scss  site.scss
core/: extra_translations.py  fields.py  filters.py  mixins.py  models.py  storages.py  utils.py
datacompass/: asgi.py  context_processors.py  urls.py  wsgi.py
docs/: conf.py  index.rst
requirements/: base.txt  development.txt  production.txt
templates/: base.html  home.html  layout.html  layout_master_detail.html  layout_plain.html  layout_wide.html
(+335 files in other folders)
