[metadata]
name = datacompass
version = 0.2.0

[flake8]
max-line-length = 120
exclude =
    .tox,
    .git,
    */migrations/*,
    docs
    node_modules

[isort]
line_length = 120
skip_glob =
    .tox
    */migrations/*
    node_modules
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
